--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
  
 </head>
-<body style="background-image: url('Socrates.JPG'); background-size: cover; background-repeat: no-repeat;">
+<body style="background-image: url('assets/Socrates.JPG'); background-size: cover; background-repeat: no-repeat;">
 
 	<div class="container">
 		
