--- a/index.html
+++ b/index.html
@@ -1,190 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Hangman</title>
-  <meta charset="utf-8">
-   
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
- 
- <meta name="viewport" content="width=device-width, initial-scale=1">
- 
-    
-
- 
+    <title>Hangman</title>
+    <meta charset="utf-8">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body style="background-image: url('assets/Socrates.JPG'); background-size: cover; background-repeat: no-repeat;">
+    <div class="container">
+        <h1 style="color: white; margin-left: 600px; font-family: freestyle script; font-size: 60px; ">———"Guess the word, or drink the Hemlock . . ." </h1>
+        <h3 style="color: white; margin-left: 600px; ">Word to Guess</h3>
+        <h4 id="wordToGuess" style="color: white; margin-left: 600px;">_ _ _ _ _ _ _</h4>
+        <h3 style="color: white; margin-left: 600px;">Guesses Remaining: <span id="guessesLeft"></span> </h3>
+        <h3 style="color: white; margin-left: 600px;">Wrong guesses: <span id="wrongGuesses"></span> </h3>
+        <h3 style="color: white; margin-left: 600px;">Wins: <span id="wins">0</span></h3>
+        <h3 style="color: white; margin-left: 600px;">Losses: <span id="losses"> 0</span></h3>
+    </div>
+    <script type="text/javascript">
+    var wordBank = ["aristotle", "plato", "socrates", "thales", "aquinas", "pythagoras", "heraclitus", "plantinga", "nietzche", "descartes", "hume", "craig", "lewis", "locke", "berkely", ];
 
-	<div class="container">
-		
-		<h1 style="color: white; margin-left: 600px; font-family: freestyle script; font-size: 60px; " >———"Guess the word, or drink the Hemlock . . ." </h1>
-	
 
+    var newWord = "";
 
-	
-		<h3 style="color: white; margin-left: 600px; ">Word to Guess</h3>
-	
+    var lettersInWord = [];
 
-	
-		<h4 id ="wordToGuess" style="color: white; margin-left: 600px;">_ _ _ _ _ _ _</h4>
-	
+    var blanks = 0;
 
-		<h3 style="color: white; margin-left: 600px;">Guesses Remaining: <span id="guessesLeft"></span> </h3>
-		
-		<h3  style="color: white; margin-left: 600px;">Wrong guesses: <span id="wrongGuesses"></span> </h3>
-	
+    var rightGuesses = [];
 
-		
-		<h3   style="color: white; margin-left: 600px;">Wins: <span id="wins">0</span></h3>
-	
+    var tryAgain = [];
 
+    var totalWins = 0;
 
-		<h3 style="color: white; margin-left: 600px;">Losses: <span id="losses"> 0</span></h3>
-	
+    var totalLosses = 0;
 
+    var guessesLeft = 0;
 
-	</div>
 
- <script type="text/javascript">
 
+    function newGame() {
+        console.log('displayWord ran');
 
-	var wordBank = ["aristotle", "plato", "socrates", "thales", "aquinas", "pythagoras", "heraclitus", "plantinga", "nietzche", "descartes", "hume", "craig", "lewis", "locke", "berkely",];
+        newWord = wordBank[Math.floor(Math.random() * wordBank.length)];
+        lettersInWord = newWord.split("");
+        blanks = lettersInWord.length;
 
+        guessesLeft = 8;
+        tryAgain = [];
+        rightGuesses = [];
 
-	var newWord = "";
 
-	var lettersInWord =[];
+        for (var i = 0; i < blanks; i++) {
+            rightGuesses.push("_ ");
+        }
 
-	var blanks = 0;
 
-	var rightGuesses = [];
+        document.getElementById("wordToGuess").innerHTML = rightGuesses.join(" ");
+        // document.getElementById("guessesLeft").innerHTML = guessesLeft;
+        document.getElementById("wins").innerHTML = totalWins;
+        document.getElementById("losses").innerHTML = totalLosses;
 
-	var tryAgain = [];
 
-	var totalWins = 0;
 
-	var totalLosses = 0;
 
-	var guessesLeft = 8;
+        console.log('newWord', newWord);
+        console.log(lettersInWord);
+        console.log(rightGuesses);
+    }
 
 
+    function checkLetter(letter) {
 
- 	function newGame () {
- 		console.log('displayWord ran');
+        var rightLetter = false;
 
- 		newWord = wordBank[Math.floor(Math.random() * wordBank.length)];
- 		lettersInWord = newWord.split("");
- 		blanks = lettersInWord.length;
+        for (var i = 0; i < blanks; i++) {
 
- 		guessesLeft = 8;
- 		tryAgain = [];
- 		rightGuesses =[];
+            if (newWord[i] == letter) {
 
+                rightGuesses[i] = letter;
 
- 		for (var i = 0; i < blanks; i++) {
-			rightGuesses.push("_ ");
-		}
+                rightLetter = true;
+            }
+        }
 
+        if (rightLetter) {
 
-		document.getElementById("wordToGuess").innerHTML = rightGuesses.join(" ");
-		// document.getElementById("guessesLeft").innerHTML = guessesLeft;
-		document.getElementById("wins").innerHTML = totalWins;
-		document.getElementById("losses").innerHTML = totalLosses;
+            for (var i = 0; i < blanks.length; i++) {
 
+                if (newWord[i] == letter) {
 
+                    //rightGuesses[i] = letter;
+                    rightLetter = false;
+                }
+            }
 
+        } else {
 
- 		console.log('newWord', newWord);
- 		console.log(lettersInWord);
- 		console.log(rightGuesses);
- 	} 
+            document.getElementById("guessesLeft").innerHTML = guessesLeft--;
+            tryAgain.push(letter);
+            //guessesLeft--;
+        }
 
+        console.log(rightGuesses);
 
- 	function checkLetter (letter) {
+    }
 
- 		var rightLetter = false;
 
- 		for(var i = 0; i < blanks; i++){
+    function roundOver() {
 
- 			if (newWord[i] == letter) {
+        console.log("Wins: " + totalWins + "| losses " + totalLosses + " | guessesLeft" + guessesLeft);
 
- 				rightGuesses[i] = letter;
- 				
- 				rightLetter = true;
- 			}
- 		}
+        document.getElementById("wrongGuesses").innerHTML = guessesLeft;
+        document.getElementById("wordToGuess").innerHTML = rightGuesses.join(" ");
+        document.getElementById("wrongGuesses").innerHTML = tryAgain.join(" ");
 
- 		if(rightLetter) {
+        if (lettersInWord.toString() == rightGuesses.toString()) {
 
- 	 	for(var i = 0; i < blanks.length; i++){
+            totalWins++;
+            alert("You win . . . your life has been spared!");
 
- 	 		if(newWord[i] == letter) {
+            document.getElementById("wins").innerHTML = totalWins;
+            newGame();
 
- 	 			//rightGuesses[i] = letter;
- 	 			rightLetter = false;
- 	 		}
- 	 	}
+        } else if (guessesLeft === 0) {
 
- 	 }
+            totalLosses--;
+            alert("Drink the Hemlock!");
 
- 	 		else {
+            document.getElementById("losses").innerHTML = totalLosses;
+            newGame();
+        }
+    }
 
- 	 			document.getElementById("guessesLeft").innerHTML = guessesLeft--;
- 	 			tryAgain.push(letter);
- 	 			//guessesLeft--;
- 	 		}
+    //This is the start of the game!
+    newGame();
 
- 	 		console.log(rightGuesses);
- 	
- 	}
+    document.onkeyup = function(event) {
+        var letterGuessed = String.fromCharCode(event.keyCode).toLowerCase(lettersInWord);
+        checkLetter(letterGuessed);
+        roundOver();
 
-
- 	function roundOver() {
-
- 		console.log("Wins: " + totalWins + "| losses " + totalLosses + " | guessesLeft" + guessesLeft);
-
- 		document.getElementById("wrongGuesses").innerHTML = guessesLeft;
- 		document.getElementById("wordToGuess").innerHTML = rightGuesses.join(" ");
- 		document.getElementById("wrongGuesses").innerHTML = tryAgain.join(" ");
-
- 		if(lettersInWord.toString() == rightGuesses.toString()) {
-
- 			totalWins++;
- 			alert("You win . . . your life has been spared!");
-
- 			document.getElementById("wins").innerHTML =	totalWins;
- 			newGame();
-
-		} 
-
-		else if(guessesLeft == 0) {
-
- 				totalLosses--;
- 				alert("Drink the Hemlock!");
-
- 				document.getElementById("losses").innerHTML = totalLosses;
- 				newGame();
- 			}
- 		}
-
- 	//This is the start of the game!
- 	newGame();
-
-	document.onkeyup= function(event){
-		var letterGuessed = String.fromCharCode(event.keyCode).toLowerCase(lettersInWord);
-		checkLetter(letterGuessed);
-		roundOver();
-
-	}
-
-
-
-
-
-	
-</script>
-
+    }
+    </script>
 </body>
+
 </html>
